<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Digital Showroom</string>
    <string name="app_name_staging">DS Staging</string>
    <string name="image_view_content_description">image_view_content_description</string>
    <string name="loading">Loading…</string>
    <string name="msg_back_press">Double click to exit the application</string>
    <string name="enter_your_mobile_number">Enter your \nmobile number</string>
    <string name="we_will_send_you_4_digit_otp">We will send you 4 digit OTP</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_whatsapp_number">Enter WhatsApp Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="mandatory_field_message">This field is mandatory</string>
    <string name="please_enter_valid_input">Please enter valid input</string>
    <string name="mobile_number_length_validation_message">Length of Mobile number must be 10</string>
    <string name="enter_4_digit_otp_you_received">Enter 4 digit\nOTP you received</string>
    <string name="verify">Verify</string>
    <string name="transition_name">transitionName</string>
    <string name="otp_auto_resend_in">OTP auto resend in</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_your_dukaan_name">Enter your\nDukaan name</string>
    <string name="enter_your_dukaan_location">Enter your\nDukaan location</string>
    <string name="step_1_2" tools:ignore="TypographyFractions">Step 1/2</string>
    <string name="next">Next</string>
    <string name="your_shop_store_dukaan_name">Your Shop/ Store/ Dukaan Name</string>
    <string name="step_2_2">Step 2/2</string>
    <string name="enter_location">Enter Location</string>
    <string name="please_wait">Please wait…</string>
    <string name="ok">OK</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="turn_on_internet_message">Please turn on internet connection to continue</string>
    <string name="close">Close</string>
    <string name="authenticating_user">Authenticating User</string>
    <string name="complete_profile">Complete Profile</string>
    <string name="add_logo">+ Add Logo</string>
    <string name="my_account">My Account</string>
    <string name="store_controls">Store controls</string>
    <string name="more_controls">More Controls</string>
    <string name="share_your_showroom_with_customers">Share your showroom with \ncustomers</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="my_rewards">My Rewards</string>
    <string name="app_settings">App Settings</string>
    <string name="feedback">Feedback</string>
    <string name="auto_data_backup">100% Auto \nData Backup</string>
    <string name="safe_secure">100% Safe \nAnd Secure</string>
    <string name="new_release">New Release</string>
    <string name="view_top_store">View Top Stores</string>
    <string name="text_new">New</string>
    <string name="digital_showroom_web">Digital Showroom Web</string>
    <string name="trending">Trending</string>
    <string name="bulk_upload_items">Bulk Upload Items</string>
    <string name="best_viewed_on">Best viewed on</string>
    <string name="link_copied">link copied</string>
    <string name="start_now">Start Now</string>
    <string name="store_name">Store Name</string>
    <string name="profile">Profile</string>
    <string name="step_1_store_description">Step 1: Store Description</string>
    <string name="save_n_continue"><![CDATA[Save & Continue]]></string>
    <string name="map_api_key">AIzaSyA9UIK8Gfrvs0JTLjaGKeEB8w7hb_RXKWM</string>
    <string name="how_it_works">How it works?</string>
    <string name="text_no">NO</string>
    <string name="rupee_symbol">₹</string>
    <string name="txt_yes">YES</string>
    <string name="today_s_sale">Today\'s Sale</string>
    <string name="week_s_sale">Week\'s Sale</string>
    <string name="amount">Amount</string>
    <string name="i_will_do_later"><u>I will do it later</u></string>
    <string name="minus">-</string>
    <string name="select_state">Select State</string>
    <string name="skip">Skip</string>
    <string name="partnerKeyProd">lUfdla502e197aec448d0acc3f837b4003569</string>
    <string name="default_notification_channel_id">DIGITAL_DUKAAN_ID</string>
    <string name="orders">Orders</string>
    <string name="catalog">Catalog</string>
    <string name="marketing">Marketing</string>
    <string name="settings">Settings</string>
    <string name="premium">Premium</string>
    <string name="delete_product">Delete Product</string>
    <string name="are_you_sure_to_delete">Are you sure to delete this item permanently?</string>
    <string name="term_and_condition"><![CDATA[Terms & Condition]]></string>
    <string name="view_as_customer">View as Customer</string>
    <string name="share_product">Share Product</string>
    <string name="take_order">Take Order</string>
    <string name="sample_send_bill"><![CDATA[Send Bill to your customers & collect money online]]></string>
    <string name="create_a_new_bill">Create a New Bill</string>
    <string name="enter_bill_amount">Enter Bill Amount</string>
    <string name="items_are_not_available">Items are not available</string>
    <string name="delivery_guy_not_available">Delivery guy not available</string>
    <string name="why_are_you_rejecting_the_order">Why are you rejecting the Order?</string>
    <string name="no_internet_message">Make sure Wi-Fi or Cellular data is turned on, then try again</string>
    <string name="free">free</string>
    <string name="add_discount_and_other_charges"><![CDATA[Add discount & Other charges]]></string>
    <string name="store_link_saved">Store Link Saved</string>
    <string name="your_new_store_link">Your New Store Link</string>
    <string name="share_store_link">Share Store Link</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="out_of_stock_message">Are you sure you want to make this item out of stock?</string>
    <string name="your_edited_link">Your edited link</string>
    <string name="add_your_bank_account">Add your bank\nAccount</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="dont_show_again_message">Don\'t show this again</string>
    <string name="send_bill">Send Bill</string>
    <string name="force_update_heading">Get the Latest Update</string>
    <string name="force_update_message">Update now for all the latest features</string>
    <string name="marketing_page_heading">Promote your store</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="enter_description_optional">Enter Description (Optional)</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="out_of_stock">(out of stock)</string>
    <string name="bill_value_must_be_greater_than_zero">Bill value must be \ngreater than 0</string>
    <string name="discount">Discount</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="please_fill_price_for_each_product">Please add price for all products</string>
    <string name="activate">Activate</string>
    <string name="my_payments">My Payments</string>
    <string name="settlements">Settlements</string>
    <string name="read_more"><u>Read more</u></string>
    <string name="txn_charges_are_applicable">*Txn charges are applicable</string>
    <string name="txn_id_is_blank">Error in getting details. Contact care@dotpe.in</string>
    <string name="pick_from_contacts">or Pick from contacts</string>
    <string name="adjust_image_in_white_box">Adjust the image in the white box</string>
    <string name="send_reminder">Send Reminder</string>
    <string name="default_mobile">0000000000</string>
    <string name="flat">Flat</string>
    <string name="add_variants_optional">+ Add Variants (optional)</string>
    <string name="logout_message">You have been logged out for system maintenance activity. Please login again.</string>
    <string name="or">or</string>
    <string name="login_using_true_caller">Login using TrueCaller</string>
    <string name="made_in_india">Made in India</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="scan">SCAN</string>
    <string name="order">ORDER</string>
    <string name="pay">PAY</string>
    <string name="bestseller">Bestseller</string>
    <string name="search_results">Search Results</string>
    <string name="your_store_name_here">Your Store Name Here</string>
    <string name="off">OFF</string>
    <string name="sale">SALE</string>
    <string name="please_enter_valid_url">Please enter valid URL</string>
    <string name="already_have_a_domain">Already Have a Domain?</string>
    <string name="search_domain">Search Domain</string>
    <string name="best_pick_for_you">Best Pick for You</string>
    <string name="only_numeric">0123456789</string>
    <string name="are_you_sure_you_want_to_delete_this_variant">Are you sure you want to delete this variant ?</string>
    <string name="no_result_found">No result found</string>
    <string name="leads_search_toolbar_hint">Search by Phone or Name</string>
    <string-array name="state_array">
        <item >Andhra Pradesh</item>
        <item >Arunachal Pradesh</item>
        <item >Assam</item>
        <item >Bihar</item>
        <item >Chhattisgarh</item>
        <item >Delhi</item>
        <item >Goa</item>
        <item >Gujarat</item>
        <item >Haryana</item>
        <item >Himachal Pradesh</item>
        <item >Jharkhand</item>
        <item >Karnataka</item>
        <item >kerala</item>
        <item >Madhya Pradesh</item>
        <item >Maharashtra</item>
        <item >Manipur</item>
        <item >Meghalaya</item>
        <item >Mizoram</item>
        <item >Nagaland</item>
        <item >Odisha</item>
        <item >Punjab</item>
        <item >Rajasthan</item>
        <item >Sikkim</item>
        <item >Tamil Nadu</item>
        <item >Telangana</item>
        <item >Tripura</item>
        <item >Uttar Pradesh</item>
        <item >Uttarakhand</item>
        <item >West Bengal</item>
    </string-array>
</resources>

