<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/upper_curve_white_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/_12sdp">

    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/image_view_content_description"
        android:src="@drawable/ic_order_detail_green_tick" />

    <TextView
        style="@style/common_bold_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/store_link_saved" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/your_new_store_link"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/storeLinkTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/your_new_store_link"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareStoreLinkTextView"
        style="@style/common_text_view_background"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/share_store_link" />

</LinearLayout>