<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/upper_curve_white_background"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orderRejectHeadingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center_vertical"
        android:text="@string/why_are_you_rejecting_the_order"
        android:textColor="@color/black"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintStart_toStartOf="@+id/billAmountTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp">

        <RadioButton
            android:id="@+id/itemNotAvailableRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/items_are_not_available"
            android:textSize="@dimen/_12sdp" />

        <RadioButton
            android:id="@+id/deliveryGuyNotAvailableRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/delivery_guy_not_available"
            android:textSize="@dimen/_12sdp" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/slight_curve_black_background_selector"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:onClick="onClick"
        android:padding="@dimen/_10sdp"
        android:text="@string/start_now"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

</LinearLayout>