<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/curve_white_background"
    android:minWidth="@dimen/_200sdp"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:contentDescription="@string/image_view_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/please_wait"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintStart_toEndOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/okTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        style="@style/common_text_view_background"
        android:text="@string/ok" />

</LinearLayout>