<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curve_white_background"
    android:gravity="center"
    android:minWidth="@dimen/_220sdp"
    android:orientation="vertical"
    android:padding="@dimen/_18sdp">

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:contentDescription="@string/image_view_content_description"
        android:gravity="center"
        android:src="@drawable/ic_leads_reminder_green_check" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/force_update_message"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/updateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/ripple_curve_grey_border_white_background"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        android:onClick="onClick"
        android:paddingStart="@dimen/_18sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:text="@string/ok"
        android:textColor="@color/black" />

</LinearLayout>