<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/_8sdp"
    android:minWidth="@dimen/_220sdp"
    android:layout_margin="@dimen/_5sdp"
    android:background="@drawable/curve_white_background2"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/deleteVariantMessageTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/are_you_sure_you_want_to_delete_this_variant"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deleteVariantTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/red"
        android:fontFamily="@font/roboto_medium"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintEnd_toEndOf="@id/deleteVariantMessageTextView"
        app:layout_constraintStart_toStartOf="@id/deleteVariantMessageTextView"
        app:layout_constraintTop_toBottomOf="@id/deleteVariantMessageTextView" />

    <TextView
        android:id="@+id/deleteVariantCancelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@id/deleteVariantMessageTextView"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@id/deleteVariantMessageTextView"
        app:layout_constraintTop_toTopOf="@+id/deleteVariantTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>